sonar warning removal
Signed-off-by: Fabrice Buscaylet <fabrice.buscaylet@artelys.com>